// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings should render correctly (snapshot) 1`] = `
<div>
  <h1
    class="ant-typography mb-6 mt-48"
  >
    Heading
  </h1>
</div>
`;

exports[`Headings should render correctly (snapshot) 2`] = `
<div>
  <h2
    class="ant-typography mb-6 mt-24"
  >
    Heading
  </h2>
</div>
`;

exports[`Headings should render correctly (snapshot) 3`] = `
<div>
  <h3
    class="ant-typography mb-6 mt-12"
  >
    Heading
  </h3>
</div>
`;

exports[`Headings should render correctly (snapshot) 4`] = `
<div>
  <h4
    class="ant-typography mb-6 mt-6"
  >
    Heading
  </h4>
</div>
`;

exports[`Headings should render correctly (snapshot) 5`] = `
<div>
  <h5
    class="ant-typography mb-6 mt-3"
  >
    Heading
  </h5>
</div>
`;

exports[`Headings should render correctly (snapshot) 6`] = `
<div>
  <h5
    class="ant-typography mb-6 mt-1.5"
  >
    Heading
  </h5>
</div>
`;
